fixed close button on mobile

--- a/src/pages/Home/section/NavButton/NavButton.scss
+++ b/src/pages/Home/section/NavButton/NavButton.scss
@@ -26,8 +26,8 @@
     height: 6rem;
     hr {
       width: 3rem;
-      margin-top: .3rem;
-      margin-bottom: .3rem;
+      margin-top: 3px;
+      margin-bottom: 3px;
       background-color: #666;
       border-color: #666;
       height: 3px;
@@ -42,13 +42,13 @@
 }
 .line1 {
   display:  inline-block;
-  transform: translateY(.9rem) rotate(-45deg);
+  transform: translateY(9px) rotate(-45deg);
 }
 .line2 {
   opacity: 0;
 }
 .line3 {
   display:  inline-block;
-  transform:  translateY(-.9rem) rotate(45deg);
+  transform:  translateY(-9px) rotate(45deg);
 }
 
